# django-natural-keys

./: .travis.yml  LICENSE  README.md  pyproject.toml  runtests.sh  serializers.py  setup.py
.github/workflows/: test.yml
natural_keys/: __init__.py  models.py  serializers.py
tests/: __init__.py  settings.py  test_naturalkey.py  test_rest.py  urls.py
tests/test_app/: models.py  rest.py  urls.py  views.py
tests/test_app/migrations/: 0001_initial.py
